--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,7 @@ steps:
     settings:
       username: macoredroid
       password:
-        from_secret: dockerhub_secrets
+        from_secret: macoredroid
       repo: macoredroid/broker-websocket
       tags:
         - v1.0.0
