--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,3 +1,3 @@
-spring.rabbitmq.host=mu-rabbit-rabbitmq.brokerone.svc.cluster.local
+spring.rabbitmq.host=mu-rabbit-rabbitmq.brokertwo.svc.cluster.local
 spring.rabbitmq.username=user
-spring.rabbitmq.password=kDSOi5wltP
+spring.rabbitmq.password=avyWXIt5sb
